# sparko-embedded-std

./: .gitignore  Cargo.toml  README.md  build.sh  sparko-platform.code-workspace
boards/cyd/: Cargo.toml
boards/cyd/src/: main.rs
boards/devkitv1/: Cargo.toml
boards/supermini-esp32c3/: Cargo.toml
boards/supermini-esp32c3/src/: main.rs
boards/wave-esp32c6147/src/: main.rs
boards/wave-esp32c6touch147/: Cargo.toml  build.rs
boards/wave-esp32c6touch147/src/: main.rs
boards/xiao-esp32c6/: Cargo.toml
boards/xiao-esp32c6/src/: main.rs
examples/: test_schedule.rs
examples/cyd/src/: main.rs
examples/devkitv1/: Cargo.toml
examples/devkitv1/src/: main.rs
examples/supermini-esp32c3/src/: main.rs
examples/wave-esp32c6147/: Cargo.toml
examples/wave-esp32c6147/src/: main.rs
examples/wave-esp32c6touch147/src/: main.rs
examples/xaio-esp32c6/src/: main.rs
examples/xiao-esp32c6/: Cargo.toml
examples/xiao-esp32c6/src/: main.rs
libs/feature-config-derive/: Cargo.toml
libs/feature-config-derive/src/: lib.rs
libs/sparko-embedded-std/: Cargo.toml
libs/sparko-embedded-std/examples/: test_schedule.rs
libs/sparko-embedded-std/src/: config.rs  config_manager.rs  feature.rs  http_server.rs  platform.rs  tz.rs
libs/sparko-embedded-std/src/graphics/: clock.rs  mod.rs
libs/sparko-embedded-std/src/task/: manager.rs  scheduler.rs
libs/sparko-esp-idf/: Cargo.toml
libs/sparko-esp-idf/ZZZ.Zvscode/: settings.json
libs/sparko-esp-idf/src/: ahrs.rs  analog_clock_feature.rs  binary_clock_feature.rs  commands.rs  config_store.rs  core.rs  display_mipidsi.rs  dyndns2.rs  esp32_platform.rs  http.rs  led.rs  led_strip.rs  lib.rs  smart_led.rs  sparko_esp32_std.rs  touch.rs  wifi.rs
libs/sparko-esp-idf/src/ahrs/: qmi8658.rs
libs/sparko-esp-idf/src/display/: mipi_dsi_display_manager.rs  mod.rs
libs/sparko-esp-idf/src/features/: analog_clock.rs  binary_clock.rs  dyndns2.rs  mod.rs
libs/sparko-esp-idf/src/led/: mono_led.rs  rgb_led.rs  simple_led.rs
libs/sparko-esp-idf/src/touch/: axs5106l.rs
src/: command.rs  config.rs  config_manager.rs  feature.rs  http_server.rs  lib.rs  listener.rs  platform.rs  problem.rs  task.rs  tz.rs
src/graphics/: clock.rs  mod.rs
src/task/: mod.rs
