[package]
name = "sparko-embedded-std-example-cyd"
version = "0.1.0"
edition = "2024"
resolver = "2"

[[bin]]
name = "sparko-embedded-std-example-cyd"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[dependencies]
log = "0.4"
anyhow = "1.0.102"
croner = "3.0.1"
chrono = "0.4.44"

sparko-embedded-std = { path = "../../libs/sparko-embedded-std" }
sparko-esp-idf = { path = "../../libs/sparko-esp-idf", features = ["board-cyd"]}





esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"], optional = true }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"], optional = true }
embedded-svc = { version = "0.29.0", optional = true }
esp-idf-hal = { version = "0.46.2", optional = true }
esp-idf-sys = { version = "0.37.2", features = ["binstart"], optional = true }
futures = { version = "0.3.32", optional = true }
smart-leds = "0.4.0"
#ws2812-esp32-rmt-driver = { version = "0.13.1", features = ["smart-leds-trait"] }
ws2812-esp32-rmt-driver = { path = "../../../ws2812-esp32-rmt-driver", features = ["smart-leds-trait"] }


[features]
default = ["espidf"]
espidf = ["esp-idf-svc", "embassy-time", "embedded-svc", "esp-idf-hal", "esp-idf-sys", "futures"]

[build-dependencies]
embuild = "0.33"

