[package]
name = "sparko-embedded-std-example-wave-esp32c6touch147"
version = "0.1.0"
edition = "2024"
resolver = "2"

[[bin]]
name = "sparko-embedded-std-example-wave-esp32c6touch147"
harness = false # do not use the built-in cargo test harness -> resolve rust-analyzer errors

[dependencies]
log = "0.4"
anyhow = "1.0.102"
croner = "3.0.1"
chrono = "0.4.44"
embedded-graphics = "0.8.1"

sparko-embedded-std = { path = "../../libs/sparko-embedded-std" }
sparko-esp-idf = { path = "../../libs/sparko-esp-idf", features = ["board-wave-esp32c6touch147", "tilt", "ahrs"]}





esp-idf-svc = { version = "0.52.1", features = ["critical-section", "embassy-time-driver", "embassy-sync"], optional = true }
# Remove `generic-queue-8` if you plan to use `embassy-time` WITH `embassy-executor`
embassy-time = { version = "0.5", features = ["generic-queue-8"], optional = true }
embedded-svc = { version = "0.29.0", optional = true }
esp-idf-hal = { version = "0.46.2", optional = true }
esp-idf-sys = { version = "0.37.2", optional = true }
futures = { version = "0.3.32", optional = true }



[features]
default = ["espidf"]
espidf = ["esp-idf-svc", "embassy-time", "embedded-svc", "esp-idf-hal", "esp-idf-sys", "futures"]

[build-dependencies]
embuild = "0.33"

